k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seto
  labels:
    app.kubernetes.io/part-of: seto
